# imagekit_ffi

./: .gitignore  .metadata  .pubignore  CHANGELOG.md  README.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/imagekit_ffi_example/: MainActivity.kt
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: imagekit_ffi.podspec
ios/Classes/: imagekit_ffi.c
lib/: imagekit_ffi.dart  imagekit_ffi_bindings_generated.dart
linux/: CMakeLists.txt
src/: CMakeLists.txt  imagekit_ffi.c  imagekit_ffi.h  png_wrapper.cpp  png_wrapper.h  test_png.c
windows/: CMakeLists.txt
